# YetAnotherGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: alien.cpp  alien.hpp  box2d.cpp  box2d.hpp  bullet.cpp  bullet.hpp  constant_manager.cpp  constant_manager.hpp  direction2d.cpp  direction2d.hpp  factory_type.hpp  game_constants.cpp  game_constants.hpp  game_entity.cpp  game_entity.hpp  game_entity_factory.cpp  game_entity_factory.hpp  game_enums.hpp  gl_widget.cpp  gl_widget.hpp  gun.cpp  gun.hpp  language_manager.cpp  language_manager.hpp  logger.hpp  main.cpp  main_window.cpp  main_window.hpp  observable.cpp  observable.hpp  observer.hpp  obstacle.cpp  obstacle.hpp  point2d.cpp  point2d.hpp  ray2d.cpp  ray2d.hpp  settings_window.cpp  settings_window.hpp  space.cpp  (+6 more)
tests/: alien_test.cpp  box2d_test.cpp  bullet_test.cpp  direction2d_test.cpp  game_entity_factory_test.cpp  game_entity_test.cpp  gun_test.cpp  logger_test.cpp  observer_test.cpp  obstacle_test.cpp  point2d_test.cpp  ray2d_test.cpp  space_test.cpp
